crates/compiler/test_syntax/tests/snapshots/pass/when_if_guard.expr.formattedmigrate.roc
when x is
    _ ->
        1

    _ ->
        2

    Ok ->
        3