crates/compiler/test_syntax/tests/snapshots/fail/pattern_binds_keyword.expr.roc
when Just 4 is
    Just when ->
        4

    _ ->
        2
